# brutus

./: .env.example  .gitignore  PLAN.md  README.md  gemini.py  glm.py  pyproject.toml
brutus/: __init__.py  cli.py  config.py  db.py  llm.py  models.py  server.py
brutus/classify/: __init__.py  heuristics.py  llm_score.py
brutus/fetch/: __init__.py  github_search.py  goodfirstissue.py  gsoc.py  images.py  nlsearch.py
brutus/pr/: __init__.py  publish.py
brutus/solve/: __init__.py  detect.py  ralph.py  sandbox.py  setup.py  skill.py  state.py
docs/: SAFETY.md
tests/: conftest.py  test_classify.py  test_cli_pick.py  test_cli_run.py  test_cli_solve.py  test_config.py  test_db.py  test_fetch.py  test_images.py  test_nlsearch.py  test_publish.py  test_ralph.py  test_server.py  test_solve_support.py
web/: .env.local.example  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ActionBar.tsx  PickButton.tsx  ReviseButton.tsx
web/lib/: api.ts  db.ts
