[project]
name = "brutus"
version = "0.1.0"
description = "Find, solve, and PR open-source issues with an LLM Ralph loop."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
glm = ["openai>=1.0", "python-dotenv>=1.0"]
server = ["fastapi>=0.110", "uvicorn>=0.29"]

[project.scripts]
brutus = "brutus.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
